Basic bidi support for SVG. Bug 620446, r=roc, a=roc